When processing createIndexes (on V2 indexes), secondaries should error on unfamiliar arguments

XMLWordPrintableJSON

    • Minor Change
    • ALL
    • Integration 2016-10-10
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When the createIndexes command is replicated to a secondary, if the secondary sees an argument that it doesn't understand, it should return an error (and thus abort) rather than ignoring the argument. This impacts V2 indexes only, which are new with MongoDB 3.4.

            Assignee:
            James Wahlin
            Reporter:
            Andy Schwerin (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            15 Start watching this issue

              Created:
              Updated:
              Resolved: