SERVER-24032 Replicated createIndexes should error on unrecognized fields